<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_map"
    android:gravity="center_horizontal">

    <!--Logo-->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo_content_description"
        android:src="@drawable/logo"
        android:layout_margin="@dimen/small"/>

    <!--Username-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginActivity_username"
            android:inputType="textEmailAddress"
            android:text="@string/default_email"
            android:hint="@string/username"/>
    </android.support.design.widget.TextInputLayout>

    <!--Password-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/loginActivity_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_pass"
            android:inputType="textPassword"
            android:hint="@string/password" />
    </android.support.design.widget.TextInputLayout>

    <!--Login button-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right">
        <Button
            android:id="@+id/loginActivity_createAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/create"/>
        <Button
            android:id="@+id/loginActivity_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/login"/>
    </LinearLayout>
</LinearLayout>